--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather:700|Open+Sans:300,400,600,700&amp;subset=cyrillic-ext" rel="stylesheet">
   <title>Pex</title>
 </head>
 <body>
-  
+  <header class="header">
+  <div class="container">
+    
+  </div>
+</header>
 </body>
 </html>
