--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
   <header class="header">
-  
   <div class="container">
     <div class="header__top">
       <a href="./" class="header__logo">
@@ -26,6 +25,9 @@
       <label class="header__search">
         <input type="search" name="search" id="search" class="header__search-field" placeholder="Search Website">
       </label>
+    </div>
+    <div class="header__bottom">
+      
     </div>
   </div>
 </header>
