features and pink

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
 <body>
   {% include 'templates/header.html' %}
   {% include 'templates/features.html' %}
+  {% include 'templates/pink.html' %}
 </body>
 </html>
