--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
   {% include 'templates/header.html' %}
   {% include 'templates/features.html' %}
   {% include 'templates/pink.html' %}
+  {% include 'templates/about.html' %}
 </body>
 </html>
