начало блока experience и правки в хэдер

--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
   {% include 'templates/features.html' %}
   {% include 'templates/pink.html' %}
   {% include 'templates/about.html' %}
+  {% include 'templates/experience.html' %}
 </body>
 </html>
