--- a/index.html
+++ b/index.html
@@ -126,5 +126,21 @@
     </div>
   </div>
 </section>
+  <section class="article">
+  <div class="container">
+    <div class="article__post">
+      <button class="button button_small" type="button">Photography</button>
+      <div class="article__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit
+      </div>
+      <div class="article__author">
+        <div class="article_photo"></div>
+        <div class="article__name">
+          Blaz Robar, god like web designer
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
