--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
   {% include 'templates/pink.html' %}
   {% include 'templates/about.html' %}
   {% include 'templates/experience.html' %}
+  {% include 'templates/article.html' %}
 </body>
 </html>
