блок about_2 и правки в article, начало блока contacts

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,7 @@
   {% include 'templates/about.html' %}
   {% include 'templates/experience.html' %}
   {% include 'templates/article.html' %}
+  {% include 'templates/about_2.html' %}
+  {% include 'templates/contacts.html' %}
 </body>
 </html>
