--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   </div>
 </section>
   <section class="about">
-  <div class="about__img"></div>
-  <article class="about__article">
+  <div class="about__img about__img_left"></div>
+  <article class="about__article about__article_right">
     <h3 class="about__title">
         A heading is what you need here
     </h3>
@@ -134,12 +134,39 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit
       </div>
       <div class="article__author">
-        <div class="article_photo"></div>
+        <div class="article__photo"></div>
         <div class="article__name">
           Blaz Robar, god like web designer
         </div>
       </div>
     </div>
+  </div>
+</section>
+  <section class="about about_right">
+  <div class="container">
+    <article class="about__article about__article_left">
+      <h3 class="about__title">
+          A heading is what you need here
+      </h3>
+      <p class="about__text about__text_big">
+        Tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+      <p class="about__text">
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </br>
+          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+      </p>
+    </article>
+  </div>
+</section>
+  <section class="contacts">
+  <div class="container">
+    <h3 class="contacts__title">
+      Get in touch
+    </h3>
+    <div class="contacts__text">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </div>
+      <a href="mailto:help@yomuma.com" class="">help@yomuma.com</a>
   </div>
 </section>
 </body>
