блок contacts готов

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,6 @@
   {% include 'templates/article.html' %}
   {% include 'templates/about_2.html' %}
   {% include 'templates/contacts.html' %}
+  {% include 'templates/footer.html' %}
 </body>
 </html>
