--- a/index.html
+++ b/index.html
@@ -166,8 +166,13 @@
     <div class="contacts__text">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </div>
-      <a href="mailto:help@yomuma.com" class="">help@yomuma.com</a>
+      <a href="mailto:help@yomuma.com" class="contacts__mail">help@yomuma.com</a>
   </div>
 </section>
+  <footer class="footer">
+  <div class="container">
+    
+  </div>
+</footer>
 </body>
 </html>
