--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <a href="#" class="header__menu-item">Services</a>
         <a href="#" class="header__menu-item">FAQ</a>
         <a href="#" class="header__menu-item">Contact</a>
+        <div class="header__menu-close">&#10006;</div>
       </nav>
       <label class="header__search">
         <input type="search" name="search" id="search" class="header__search-field" placeholder="Search Website">
       </label>
+      <div class="header__hamb"></div>
     </div>
     <div class="header__bottom">
       <div class="header__title">
@@ -177,5 +179,11 @@
     </div>
   </div>
 </footer>
+
+  <script
+    src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
