--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,11 @@
   {% include 'templates/about_2.html' %}
   {% include 'templates/contacts.html' %}
   {% include 'templates/footer.html' %}
+
+  <script
+    src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
