--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,7 @@
   {% include 'templates/footer.html' %}
 
   <script
-    src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+    src="./js/jquery-3.3.1.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
