--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 </footer>
 
   <script
-    src="src="./js/jquery-3.3.1.min.js"></script>
+    src="./js/jquery-3.3.1.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
